[package]
name = "psg-cli"
description = "project struct generator cli"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
colored = "3.0"
walkdir = "2"
regex = "1.10"